--- a/style.css
+++ b/style.css
@@ -18,10 +18,10 @@ div{
 }
 #header{
     width: 100%;
-    height: 100vh;
-    /* background-image: url(images/pfp_mobile.png);
+    height: 50vh;
+    background-image: url(images/pfp_mobile.png);
     background-size: cover;
-    background-position: center; */
+    background-position: center;
 }
 .container{
     padding: 10px 10px;
@@ -36,7 +36,6 @@ nav{
     justify-content: space-between;
     flex-wrap: wrap;
 }
-
 nav ul li{
     display: inline-block;
     list-style: none;
@@ -64,8 +63,8 @@ nav ul li a:hover::after{
     width: 100%;
 }
 .header-text{
-    margin-top: 20%;
     font-size:30px;
+    height:50vh;
 }
 .header-text h1{
     font-size: 30px;
@@ -75,15 +74,69 @@ nav ul li a:hover::after{
     font-size: 50px;
     }
 
+    /* -----------about---------- */
+    #about {
+        height: 50vh;
+    }
+    div  ul li{
+        list-style: none;
+        justify-content:space-between;
+    }
+    /* -----------Services---------- */
+    .services {
+        height: 50vh;
+    }
+    div a{
+        color:#caae0c;
+    }
+    div a:hover{
+        color:#032977;
+    }
+    div ul li span{
+        color:#032977;
+    }
+
+    /* -------------user stories----------- */
+    .carousel-content {
+        display: flex;
+        flex-direction: colomn;
+        justify-content: center;
+        height: 300px;
+        text-align: center;
+        padding: 20px;
+    }
+
+    .carousel-content h5 {
+        font-size: 1.1rem;
+        color:#555;
+    }
+
+    .carousel-content p {
+        font-size: 1.1rem;
+        color:#555;
+    }
+
+    .carousel-content small {
+        font-size: 0.9rem;
+        color:#888;
+    }
+    
+    /* -----------contact me--------- */
+
+    .contact {
+        height: 100vh;
+    }
+    button{
+        position: center;
+    }
     /* -----------css for small screen-------- */
 nav .fas{
     display: none;
+    color:#032977;
 }
-
 
 @media only screen and (max-width: 600px){
     .header-text{
-        margin-top: 100%;
         font-size: 30px;
     }
     nav .fas{
