--- a/style.css
+++ b/style.css
@@ -103,12 +103,13 @@ div.header-text{
 
     height: 100vh;
 
-    padding-top: 60%;    
+    padding-top: 40%;    
 }
 
 div a{
     color:#caae0c;
 }
+
 div a:hover{
     color:#032977;
 }
@@ -190,13 +191,17 @@ div a:hover{
 
 
 
+    .tab-contents  ul {
+        
+        padding: 0;
+
+    }   
     .tab-contents  ul li {
         list-style: none;
 
         justify-content:space-between;
 
         margin: 10px 0;
-
 
     }   
     
@@ -212,15 +217,11 @@ div a:hover{
 
         display: none;
 
-        padding-left: 22px;
-
-        padding-right: 6%;
     }
 
     .tab-contents.active-tab {
 
         display: block;
-
 
     }
     .tab-titles {
@@ -228,8 +229,6 @@ div a:hover{
         display: flex;
 
         margin: 20px 0 30px;
-
-        padding-left: 55px;
 
         
     }
@@ -493,10 +492,6 @@ section {
 
         position: absolute;
 
-        /* top: .5px;
-
-        right: 50px; */
-
 
     }
 
@@ -528,9 +523,11 @@ section {
 
     text-align: center;
 
-    height: 80vh;  
+    height: 100vh;  
 
     padding-top: 2%; 
+    
+    margin-bottom: 2%; 
 
     background-color: #fff;
 
@@ -633,6 +630,7 @@ section {
 nav .fas{
     display: none;
     color:#032977;
+
 }
 
 @media only screen and (max-width: 600px){
@@ -645,6 +643,7 @@ nav .fas{
 
         position:relative;
     }
+
     nav .fas{
         display: block;
 
@@ -656,32 +655,45 @@ nav .fas{
 
         position: fixed;
 
-        top: 15px;
-
-        right: 450px;
+        top: 38px;
 
         z-index: 4;
+
+        right:-250px;
 
         color:#032977;
 
         transition: right 0.5s;
+
+        padding-right: 20px;
 
     }
 
     
 nav ul {
     background-color: #caae0c;
+
     position:fixed;
+    
     top: 0;
+    
     right: -200px;
+    
     width: 200px;
+    
     height: 100vh;
-    padding-top: 5px;
+    
+    padding-top: 30px;
+    
     z-index: 4;
+    
     transition: right 0.5s;
+
 }
  nav ul li{
+    
     display: block;
+   
     margin: 25px;
  }
  nav ul .fas{
@@ -738,5 +750,6 @@ nav ul {
     height:auto;
 
     margin:0;
+
 }
 }
